# home_work_31

./: .gitignore  manage.py  pyproject.toml  pytest.ini
ads/: models.py  permissions.py  validators.py
ads/migrations/: 0001_initial.py  0002_initial.py  0003_selection.py  0004_category_slug_alter_ad_is_published_alter_ad_name.py  0005_alter_category_slug.py  0006_alter_ad_is_published.py  0007_alter_ad_is_published.py
ads/serializers/: __init__.py  ad.py  selection.py
ads/urls/: ad.py
ads/views/: __init__.py  main.py
ads/views/ad/: __init__.py  upload.py  viewset.py
ads/views/category/: __init__.py  viewset.py
ads/views/selection/: __init__.py  viewset.py
data/: csv_to_json.py  user.json
home_work_31/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py
tests/ad/: ad_create_test.py  ad_detail_test.py  ad_list_test.py
tests/selection/: selection_create_test.py
users/: models.py  validators.py
users/migrations/: 0001_initial.py  0002_user_birth_date_alter_user_email.py  0003_alter_user_age.py  0004_alter_user_email.py  0005_alter_user_birth_date.py
users/serializers/: __init__.py  users.py
users/urls/: user.py
users/views/location/: __init__.py  viewset.py
users/views/users/: __init__.py  create.py  delete.py  update.py  view.py
